correction event collapse

--- a/src/styles/components/collapse.scss
+++ b/src/styles/components/collapse.scss
@@ -17,6 +17,7 @@
 
     p {
       font-size: 1.2rem;
+      pointer-events: none;
     }
   }
 
